{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 87,
  "lineage": "244495bb-aade-42a7-884d-79886cf11f01",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:loadbalancer/app/webapp-alb/f75c7de5db757326",
            "arn_suffix": "app/webapp-alb/f75c7de5db757326",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-1033700971.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125640329:loadbalancer/app/webapp-alb/f75c7de5db757326",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bcab1b815c320f5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0015e7c75601c53b2"
              },
              {
                "subnet_id": "subnet-07fa960b971b91ee0"
              },
              {
                "subnet_id": "subnet-0cd0df29e4164d52e"
              }
            ],
            "subnets": [
              "subnet-0015e7c75601c53b2",
              "subnet-07fa960b971b91ee0",
              "subnet-0cd0df29e4164d52e"
            ],
            "tags": {
              "Name": "webapp-alb"
            },
            "tags_all": {
              "Name": "webapp-alb"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:listener/app/webapp-alb/f75c7de5db757326/7c0ccae3e47ee843",
            "certificate_arn": "arn:aws:acm:us-east-1:211125640329:certificate/7c3c7ea7-d682-46a7-9daa-2cd9dc633b5c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:targetgroup/webapp-target-group/f3c69197813bdf39",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125640329:listener/app/webapp-alb/f75c7de5db757326/7c0ccae3e47ee843",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:loadbalancer/app/webapp-alb/f75c7de5db757326",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.webapp_alb",
            "module.alb.aws_lb_target_group.webapp_target_group",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:listener/app/webapp-alb/f75c7de5db757326/ddb50d3fa6ca5eee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125640329:listener/app/webapp-alb/f75c7de5db757326/ddb50d3fa6ca5eee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:loadbalancer/app/webapp-alb/f75c7de5db757326",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.webapp_alb",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125640329:targetgroup/webapp-target-group/f3c69197813bdf39",
            "arn_suffix": "targetgroup/webapp-target-group/f3c69197813bdf39",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125640329:targetgroup/webapp-target-group/f3c69197813bdf39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:211125640329:loadbalancer/app/webapp-alb/f75c7de5db757326"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webapp-target-group"
            },
            "tags_all": {
              "Name": "webapp-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:security-group/sg-0bcab1b815c320f5f",
            "description": "Allow HTTP and HTTPS traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcab1b815c320f5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "securityGroupforALB",
            "name_prefix": "",
            "owner_id": "211125640329",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:security-group/sg-0b1854e90e8f5b599",
            "description": "Allow HTTP traffic on port 80 from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1854e90e8f5b599",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcab1b815c320f5f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcab1b815c320f5f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "securityGroupforEC2Instances",
            "name_prefix": "",
            "owner_id": "211125640329",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:internet-gateway/igw-0791ef3adff2254dd",
            "id": "igw-0791ef3adff2254dd",
            "owner_id": "211125640329",
            "tags": {
              "Name": "webapp-igw"
            },
            "tags_all": {
              "Name": "webapp-igw"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:route-table/rtb-0e97afd696b64d8b2",
            "id": "rtb-0e97afd696b64d8b2",
            "owner_id": "211125640329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:route-table/rtb-02b01b97a91904c33",
            "id": "rtb-02b01b97a91904c33",
            "owner_id": "211125640329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0791ef3adff2254dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f52d0f8ab13f02",
            "route_table_id": "rtb-0e97afd696b64d8b2",
            "subnet_id": "subnet-025ee04fb44b23962"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet5",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04411bb147510cc6c",
            "route_table_id": "rtb-0e97afd696b64d8b2",
            "subnet_id": "subnet-0fd841ddd787f1634"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9461160c8c66dbd",
            "route_table_id": "rtb-02b01b97a91904c33",
            "subnet_id": "subnet-0015e7c75601c53b2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086913043ba3648ec",
            "route_table_id": "rtb-02b01b97a91904c33",
            "subnet_id": "subnet-07fa960b971b91ee0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9848192c19cd4b",
            "route_table_id": "rtb-02b01b97a91904c33",
            "subnet_id": "subnet-0cd0df29e4164d52e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.webapp_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:subnet/subnet-025ee04fb44b23962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025ee04fb44b23962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125640329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet4"
            },
            "tags_all": {
              "Name": "private-subnet4"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:subnet/subnet-0fd841ddd787f1634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd841ddd787f1634",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125640329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet5"
            },
            "tags_all": {
              "Name": "private-subnet5"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:subnet/subnet-0015e7c75601c53b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0015e7c75601c53b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125640329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:subnet/subnet-07fa960b971b91ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa960b971b91ee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125640329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:subnet/subnet-0cd0df29e4164d52e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0df29e4164d52e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125640329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet3"
            },
            "tags_all": {
              "Name": "public-subnet3"
            },
            "vpc_id": "vpc-06e6cd9c3de499e51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125640329:vpc/vpc-06e6cd9c3de499e51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0019337f2ea3082f1",
            "default_route_table_id": "rtb-016f4549ecbc28f07",
            "default_security_group_id": "sg-0153fbb17303db3d7",
            "dhcp_options_id": "dopt-010e1f4a576e3e8e2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e6cd9c3de499e51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016f4549ecbc28f07",
            "owner_id": "211125640329",
            "tags": {
              "Name": "webapp-vpc"
            },
            "tags_all": {
              "Name": "webapp-vpc"
            }
          }
        }
      ]
    }
  ]
}